# rudo

./: Cargo.toml  Justfile  README.md  justfile  spec-badge-notifications.md
.github/workflows/: release-aur.yml
docs/: example.css  rudo.service  spec-menus-and-output-grouping.md
scripts/: render-aur-package.sh
src/: app.rs  catalog.rs  config.rs  main.rs  model.rs
src/app/: autohide.rs  css.rs  dnd.rs  item.rs  mod.rs  picker.rs  style.css
src/backend/: mod.rs  niri.rs  wayland.rs
