[package]
name = "rudo"
version = "0.3.2"
edition = "2024"
description = "A small, elegant dock for Wayland"
license = "MIT"
repository = "https://github.com/skorotkiewicz/rudo"

[dependencies]
dirs = "6.0.0"
gtk4 = "0.11.2"
gtk4-layer-shell = "0.8.0"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.12"
wayland-client = "0.31.14"
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
